# Webserv

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Client.cpp  LICENSE  Makefile  README.md  a.out  client  client.cpp  default.conf  default_j.conf  f  hello.py  jonathan.conf  no_php.conf  notes.txt  siege.conf  siege_url.txt  siege_url_no_php.txt  test  test.cpp  webserv
c_tutorial/: a.out  tcp_client.c  tcp_server.c
inc/: BuildResponse.hpp  Configuration.hpp  HTTPRequest.hpp  Socket.hpp  TcpServer.hpp  main.hpp
inc/configure/: AConfig.hpp  AST.hpp  Configuration.hpp  Location.hpp  Node.hpp  Token.hpp  TokenStream.hpp  Validator.hpp  parser.hpp  tokenizer.hpp
inc/configure_servers/: Token.hpp
siege/: siege.conf  siege_url.txt
src/: BuildResponse.cpp  BuildResponse.hpp  CGI.cpp  CGI.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  HTTPRequest.cpp  HTTPRequest.hpp  Socket.cpp  TCPServer.hpp  TcpServer.cpp  Validator.cpp  defines.hpp  ibm_serv.c  main.cpp  main.hpp  utils.cpp  utils.hpp
src/client/: Client.cp  Client.cpp  Client_hang.cp  hang
src/configuration/: Configuration.cpp  config.cpp
src/configure/: AConfig.cpp  AConfig.hpp  AST.cpp  Configuration.cpp  Configuration.hpp  Configuration_convert.cpp  Location.cpp  Location.hpp  Location_convert.cpp  Node.cpp  Node.hpp  Token.cpp  TokenStream.cpp  checkTokenType.cpp  configure.cpp  configure.hpp  parser.cpp  tokenizer.cpp
src/configure/parser/: Token.cpp  Token.hpp  TokenStream.cpp  TokenStream.hpp  parseLocation.cpp  parser.cpp  parser.hpp  parser_utils.cpp  tokenizer.cpp  tokenizer.hpp
src/configure/parsing/: Token.hpp  TokenStream.cpp  TokenStream.hpp  parseLocation.cpp  parser.cpp  parser.hpp  parser_utils.cpp  tokenizer.hpp
src/configure_servers/: AST.cpp  Token.cpp
src/request/: Request.cpp  Request.hpp
src/response/: CGI.cpp  CGI.hpp  Response.cpp  Response.hpp
src/server/: Configuration.cpp  Configuration.hpp  Socket.cpp  Socket.hpp  TCPServer.cpp  TCPServer.hpp
src/utils/: fileHandling.cpp  fileHandling.hpp  log.cpp  log.hpp  memory.cpp  strings.cpp  strings.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  main_test.cpp
test/configure/: Token_tests.cpp  configuration_integration.cpp  tokenizer_parser_integration_tests.cpp  tokenizer_tests.cpp
test/configure/dummy_config/: comments.conf  complete_server.conf  complete_syntax_error.conf  configuration_integration_1  configuration_integration_2  draft.conf  parseLocation_test_1
test/configure/parser/: parseLocation_integration_tests.cpp  parseLocation_tests.cpp  parser_tests.cpp  parser_utils_tests.cpp
test/configure_servers_tests/: Token_tests.cpp  config_test.cpp
test/configure_tests/: Token_tests.cpp  checkTokenType_tests.cpp  parser_tests.cpp  tokenizer_parser_integration_tests.cpp  tokenizer_tests.cpp
test/configure_tests/dummy_config/: draft.conf  location_test.conf  quotations.conf
test/configure_tests/parser_tests/: parseLocation_integration_tests.cpp  parseLocation_tests.cpp  parser_tests.cpp
test/request/: RequestTest.cpp
test/response/: CGITest.cpp  ResponseTest.cpp
test/server/: Server.cpp
www/: about-codam.html  codamx.html  contact.html  cookies.html  cookies.php  cookies_delete.php  covid19.html  curl.php  directory_list.php  faq.html  file_upload.html  file_upload.php  for-companies.html  form.html  form_get.html  form_get.php  form_handler.php  form_post.html  form_post.php  hello.html  index.html  index.php  index.py  is-this-for-you.html  policy-plan.html  post_data.html  press.html  script_error.php  session.php  session_login.php  session_logout.php  studying-at-codam.html  style.css  team.html  telnet.php  the-road-to-codam.html  upload.php  upload_files.html  upload_files.php  upload_handler.php
www/cgi-bin/: form.cgi  form.cpp  post_data.cgi  post_data.cpp  script  script.cpp
www/python/: index.py  inf_loop.py
www/templates/: 301.html  302.html  404.html  bottom.php  index.html  index.php  style.css  top.php
www/templates/test/: index.php
www/uploads/: .gitignore  Client.cpp  LICENSE  Makefile  README.md  notes.txt  php.ini  test.txt
